# practica-calificada-3b-JuanGA12

./: CMakeLists.txt  Escritura.h  Lectura.h  README.md  Rectangulo.cpp  Rectangulo.h  Seleccion y Ordenamiento.h  Tablero.cpp  Tablero.h  main.cpp
